--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,6 +11,11 @@ spring:
       username: root
 #      注意这个在实验室的话密码是111111 笔记本的话就是root
       password: 111111
+  redis:
+    port: 6379
+    host: 127.0.0.1
+    password:
+    database: 0
 mybatis-plus:
   configuration:
     #在映射实体或者属性时，将数据库中表名和字段名中的下划线去掉，按照驼峰命名法映射
